--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the_javascript_package",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A package having some javascript functions and classes, will publish documentation soon.",
   "main": "index.js",
   "directories": {
@@ -10,98 +10,98 @@
     "abs": "^1.3.14",
     "accepts": "^1.3.7",
     "ansi-regex": "^2.1.1",
-    "array-flatten": "^1.1.1",
     "aproba": "^1.2.0",
-    "base64-js": "^1.5.1",
     "are-we-there-yet": "^1.1.7",
-    "bl": "^4.1.0",
-    "body-parser": "^1.19.0",
+    "base64-js": "^1.5.1",
+    "array-flatten": "^1.1.1",
     "bindings": "^1.5.0",
+    "better-sqlite3": "^7.4.3",
+    "body-parser": "^1.19.0",
+    "bl": "^4.1.0",
     "buffer": "^5.7.1",
-    "capture-stack-trace": "^1.0.1",
     "bytes": "^3.1.0",
+    "capture-stack-trace": "^1.0.1",
     "chownr": "^2.0.0",
     "code-point-at": "^1.1.0",
-    "content-type": "^1.0.4",
     "content-disposition": "^0.5.3",
     "console-control-strings": "^1.1.0",
     "cookie": "^0.4.0",
-    "cookie-signature": "^1.0.6",
+    "content-type": "^1.0.4",
     "core-util-is": "^1.0.3",
+    "cookie-signature": "^1.0.6",
     "create-error-class": "^3.0.2",
     "debug": "^2.6.9",
     "decompress-response": "^4.2.1",
-    "depd": "^1.1.2",
-    "destroy": "^1.0.4",
-    "detect-libc": "^1.0.3",
     "deep-extend": "^0.6.0",
+    "deffy": "^2.2.4",
+    "delegates": "^1.0.0",
+    "depd": "^1.1.2",
+    "detect-libc": "^1.0.3",
+    "destroy": "^1.0.4",
     "duplexer2": "^0.1.4",
     "ee-first": "^1.1.1",
     "encodeurl": "^1.0.2",
-    "err": "^1.1.1",
-    "deffy": "^2.2.4",
     "end-of-stream": "^1.4.4",
     "error-ex": "^1.3.2",
+    "err": "^1.1.1",
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
-    "expand-template": "^2.0.3",
     "exec-limiter": "^3.2.13",
-    "delegates": "^1.0.0",
-    "file-uri-to-path": "^1.0.0",
+    "expand-template": "^2.0.3",
     "express": "^4.17.1",
+    "file-uri-to-path": "^1.0.0",
     "finalhandler": "^1.1.2",
     "forwarded": "^0.2.0",
-    "fresh": "^0.5.2",
     "fs-constants": "^1.0.0",
-    "function.name": "^1.0.13",
+    "fresh": "^0.5.2",
     "fs-minipass": "^2.1.0",
-    "git-package-json": "^1.4.10",
-    "gauge": "^2.7.4",
-    "git-source": "^1.1.10",
-    "better-sqlite3": "^7.4.3",
     "function-bind": "^1.1.1",
+    "function.name": "^1.0.13",
+    "gauge": "^2.7.4",
+    "git-package-json": "^1.4.10",
+    "git-source": "^1.1.10",
     "git-up": "^1.2.1",
     "git-url-parse": "^5.0.1",
     "github-from-package": "^0.0.0",
     "got": "^5.6.0",
+    "gry": "^5.0.8",
     "has": "^1.0.3",
     "has-unicode": "^2.0.1",
     "hosted-git-info": "^2.8.9",
     "http-errors": "^1.7.2",
-    "gry": "^5.0.8",
     "iconv-lite": "^0.4.24",
-    "ipaddr.js": "^1.9.1",
-    "ieee754": "^1.2.1",
-    "is-arrayish": "^0.2.1",
     "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "ieee754": "^1.2.1",
+    "ipaddr.js": "^1.9.1",
+    "is-arrayish": "^0.2.1",
     "is-core-module": "^2.6.0",
     "is-fullwidth-code-point": "^1.0.0",
     "is-plain-obj": "^1.1.0",
     "is-redirect": "^1.0.0",
     "is-retry-allowed": "^1.2.0",
-    "is-ssh": "^1.3.3",
     "is-stream": "^1.1.0",
-    "iterate-object": "^1.3.4",
+    "is-ssh": "^1.3.3",
     "isarray": "^1.0.0",
-    "ini": "^1.3.8",
+    "iterate-object": "^1.3.4",
     "limit-it": "^3.2.10",
     "lodash": "^4.17.21",
+    "lowercase-keys": "^1.0.1",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
-    "lowercase-keys": "^1.0.1",
+    "methods": "^1.1.2",
     "mime": "^1.6.0",
     "mime-db": "^1.49.0",
     "mime-types": "^2.1.32",
-    "mimic-response": "^2.1.0",
-    "methods": "^1.1.2",
-    "minipass": "^3.1.5",
     "minimist": "^1.2.5",
+    "mimic-response": "^2.1.0",
+    "minipass": "^3.1.5",
     "minizlib": "^2.1.2",
     "mkdirp": "^1.0.4",
-    "ms": "^2.0.0",
+    "mkdirp-classic": "^0.5.3",
     "moment": "^2.29.1",
     "napi-build-utils": "^1.0.2",
-    "mkdirp-classic": "^0.5.3",
+    "ms": "^2.0.0",
     "negotiator": "^0.6.2",
     "node-abi": "^2.30.1",
     "node-status-codes": "^1.0.0",
@@ -109,81 +109,81 @@
     "normalize-package-data": "^2.5.0",
     "number-is-nan": "^1.0.1",
     "npmlog": "^4.1.2",
-    "object-assign": "^4.1.1",
     "oargv": "^3.4.10",
-    "on-finished": "^2.3.0",
     "obj-def": "^1.0.9",
-    "one-by-one": "^3.2.8",
+    "object-assign": "^4.1.1",
     "once": "^1.4.0",
+    "on-finished": "^2.3.0",
+    "one-by-one": "^3.2.8",
     "os-tmpdir": "^1.0.2",
     "package-json-path": "^1.0.9",
     "package-json": "^2.4.0",
     "package.json": "^2.0.1",
     "parse-json": "^2.2.0",
-    "path-parse": "^1.0.7",
     "parse-url": "^1.3.11",
-    "path-to-regexp": "^0.1.7",
-    "pinkie": "^2.0.4",
     "parseurl": "^1.3.3",
-    "prebuild-install": "^6.1.4",
-    "process-nextick-args": "^2.0.1",
+    "path-to-regexp": "^0.1.7",
+    "path-parse": "^1.0.7",
+    "pinkie": "^2.0.4",
     "pinkie-promise": "^2.0.1",
+    "prebuild-install": "^6.1.4",
     "prepend-http": "^1.0.4",
-    "pump": "^3.0.0",
+    "process-nextick-args": "^2.0.1",
     "protocols": "^1.4.8",
-    "qs": "^6.7.0",
+    "proxy-addr": "^2.0.7",
+    "pump": "^3.0.0",
     "quick.db": "^7.1.3",
     "r-json": "^1.2.10",
     "r-package-json": "^1.0.9",
-    "proxy-addr": "^2.0.7",
-    "raw-body": "^2.4.0",
-    "read-all-stream": "^3.1.0",
     "range-parser": "^1.2.1",
-    "readable-stream": "^2.3.7",
+    "raw-body": "^2.4.0",
+    "rc": "^1.2.8",
+    "read-all-stream": "^3.1.0",
+    "qs": "^6.7.0",
     "registry-auth-token": "^3.4.0",
-    "safe-buffer": "^5.1.2",
-    "resolve": "^1.20.0",
+    "readable-stream": "^2.3.7",
     "registry-url": "^3.1.0",
+    "resolve": "^1.20.0",
+    "safe-buffer": "^5.1.2",
     "safer-buffer": "^2.1.2",
     "semver": "^5.7.1",
     "send": "^0.17.1",
-    "serve-static": "^1.14.1",
+    "setprototypeof": "^1.1.1",
     "set-blocking": "^2.0.0",
     "simple-concat": "^1.0.1",
-    "setprototypeof": "^1.1.1",
     "signal-exit": "^3.0.4",
     "simple-get": "^3.1.0",
-    "spdx-correct": "^3.1.1",
+    "serve-static": "^1.14.1",
     "sliced": "^1.0.1",
     "spdx-exceptions": "^2.3.0",
+    "spdx-correct": "^3.1.1",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-ids": "^3.0.10",
+    "statuses": "^1.5.0",
     "string-width": "^1.0.2",
     "string_decoder": "^1.1.1",
-    "strip-json-comments": "^2.0.1",
     "strip-ansi": "^3.0.1",
+    "strip-json-comments": "^2.0.1",
     "tar": "^6.1.11",
-    "tmp": "^0.0.28",
+    "tar-stream": "^2.2.0",
     "tar-fs": "^2.1.1",
     "timed-out": "^2.0.0",
-    "tar-stream": "^2.2.0",
-    "toidentifier": "^1.0.0",
-    "typpy": "^2.3.13",
+    "tmp": "^0.0.28",
     "tunnel-agent": "^0.6.0",
+    "toidentifier": "^1.0.0",
     "type-is": "^1.6.18",
-    "ul": "^5.2.15",
-    "statuses": "^1.5.0",
+    "typpy": "^2.3.13",
     "unpipe": "^1.0.0",
-    "url-parse-lax": "^1.0.0",
+    "ul": "^5.2.15",
     "unzip-response": "^1.0.2",
-    "util-deprecate": "^1.0.2",
-    "validate-npm-package-license": "^3.0.4",
+    "url-parse-lax": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2",
+    "util-deprecate": "^1.0.2",
     "wide-align": "^1.1.3",
-    "yallist": "^4.0.0",
-    "rc": "^1.2.8",
-    "wrappy": "^1.0.2"
+    "validate-npm-package-license": "^3.0.4",
+    "wrappy": "^1.0.2",
+    "vary": "^1.1.2",
+    "yallist": "^4.0.0"
   },
   "devDependencies": {},
   "scripts": {
@@ -193,8 +193,23 @@
     "type": "git",
     "url": "git+https://github.com/SoulYT1534/Javascript.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "java",
+    "javascript",
+    "coding",
+    "class",
+    "function",
+    "constructor",
+    "commonjs",
+    "the_javascript_package",
+    "the_java",
+    "the_javascript",
+    "the_",
+    "javascript_function",
+    "javascript_class",
+    "javascript_constructor"
+  ],
+  "author": "soul_yt",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/SoulYT1534/Javascript/issues"
